--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .jumbotron {
@@ -23,7 +25,7 @@ textarea{
 
 .description{
   white-space: pre-wrap;
-  /* padding: 0; */
+  padding: 0;
 }
 
 .time-block{
@@ -41,6 +43,7 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  text-align: right;
 }
 
 .past {
