--- a/style.css
+++ b/style.css
@@ -72,4 +72,6 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+  background-color: red;
+  /* display: none; */
 }
