--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  padding: 2px;
 }
 
 .saveBtn i:hover {
@@ -74,4 +75,29 @@ textarea{
   transition: all .3s ease-in-out;
   background-color: red;
   /* display: none; */
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+    /* column-gap: 1rem; */
+    /* padding: 2px; */
+  }
+  /* .saveBtn {
+    height: 40px;
+  } */
+  .hour {
+    text-align: center;
+  }
+
+  .description {
+    font-size: small;
+  }
+
+  .saveArea {
+    height: 300px;
+    margin-bottom: 50px;
+    
+  }
 }
