--- a/style.css
+++ b/style.css
@@ -81,25 +81,25 @@ textarea{
   /* For mobile phones: */
   [class*="col-"] {
     width: 100%;
-    /* column-gap: 1rem; */
-    /* padding: 2px; */
   }
-  /* .saveBtn {
-    height: 40px;
-  } */
+  
   .hour {
-    /* margin-top: 10px; */
+    /* margin-top: 30px; */
     text-align: center;
+    font-weight: bold;
+    border: 1px solid #000000;
   }
 
   .description {
-    font-size: small;
+    font-size: .75rem;
+    border: 1px solid #000000;
   }
 
-  .saveBtn {
-    /* margin: 5px; */
-    /* height: 300px; */
-    /* margin-bottom: 50px; */
-    
+  /* .saveArea {
+    border: 1px solid #000000;
+  } */
+
+  .row {
+    margin-bottom: 20px;
   }
 }
