--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,7 @@ textarea{
   text-align: right;
 }
 
+/* class for color of text box based on current time */
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -74,17 +75,15 @@ textarea{
   font-size: 40px;
   transition: all .3s ease-in-out;
   background-color: red;
-  /* display: none; */
 }
 
+/* For mobile phones or smaller devices */
 @media only screen and (max-width: 768px) {
-  /* For mobile phones: */
   [class*="col-"] {
     width: 100%;
   }
   
   .hour {
-    /* margin-top: 30px; */
     text-align: center;
     font-weight: bold;
     border: 1px solid #000000;
@@ -94,10 +93,6 @@ textarea{
     font-size: .75rem;
     border: 1px solid #000000;
   }
-
-  /* .saveArea {
-    border: 1px solid #000000;
-  } */
 
   .row {
     margin-bottom: 20px;
