--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -23,12 +23,12 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+.description {
   white-space: pre-wrap;
   padding: 0;
 }
 
-.time-block{
+.time-block {
   text-align: center;
   border-radius: 15px;
 }
@@ -36,7 +36,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
@@ -66,23 +66,23 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #06aed5;
   color: white;
   padding: 2px;
 }
 
 .saveBtn i:hover {
   font-size: 40px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   background-color: red;
 }
 
 /* For mobile phones or smaller devices */
 @media only screen and (max-width: 768px) {
-  [class*="col-"] {
+  [class*='col-'] {
     width: 100%;
   }
-  
+
   .hour {
     text-align: center;
     font-weight: bold;
@@ -90,7 +90,7 @@ textarea{
   }
 
   .description {
-    font-size: .75rem;
+    font-size: 0.75rem;
     border: 1px solid #000000;
   }
 
